# mplgz2ingested

./: .gitignore  LICENSE.txt  README.md  __init__.py  calibrate_ingested.py  create_ingested.py  load_afterpulse.py  load_mpl_inline.py  pyproject.toml  raw_to_ingested.py  setup.py  test_calibrate_ingested.ipynb  test_load_afterpulse.ipynb  test_load_calibration_day.ipynb
SLURM_workflows/leeds_ingested_catchup/: ingest_calibrate_day.py  runjob.sh  schedule_convert_all_since_latest.py
mplgz2ingested/: __init__.py  von.py
mplgz2ingested.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mplgz2ingested/afterpulse/: README.md  afterpulse.py
mplgz2ingested/data/: __init__.py  time_averaged_afterpulse.py
mplgz2ingested/steps/: README.md  __init__.py  calibrate_ingested.py  load.py  load_afterpulse.py  load_overlap.py  load_raw.py  raw_to_ingested.py
mplgz2ingested/workflows/: README.md  __init__.py  calibrate_day.py  create_ingested.py  run_create_ingested.py
quicklooks/: createMPLquicklook.py  mpl_quicklook.py
src/: create_ingested.py  load_afterpulse.py  load_mpl_inline.py  raw_to_ingested.py  run_create_ingested.py
src/mplgz_to_ingested.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: afterpulse.cdf  afterpulse_catalogue.txt  afterpulse_catalogue_1.txt  afterpulse_catalogue_2.txt  afterpulse_catalogue_3.txt  afterpulse_with_time.ipynb  catalogue_afterpulse.ipynb  investigate_afterpulse_by_day.ipynb  test_calibrate_ingested.ipynb  test_create_ingested.ipynb  test_load_afterpulse.ipynb  test_load_calibration_day.ipynb
(+11 files in other folders)
