[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[project]
name = 'mplgz_to_ingested'
version = '0.0.1'
dependencies = [
    'mpl2nc',
    'gzip',
    'os',
    'datetime',
    'xarray',
    'numpy',
    'netCDF4',
    'glob'
]

[tool.setuptools.packages.find]
where = ['src']
exclude = ['*.sh','*.cdf']